<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OpponentActivity">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <ImageView
                    android:id="@+id/imageLogo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tftlogo" />

            <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/titleOpponent"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            <ImageButton
                    android:id="@+id/botonMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/baseline_menu_white_48" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <TextView
                    android:id="@+id/helpText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minLines="2"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textSize="18sp" />
        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:weightSum="3">

            <Button
                    android:id="@+id/botonPlayer8"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player8" />

            <Button
                    android:id="@+id/botonPlayer1"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player1" />

            <Button
                    android:id="@+id/botonPlayer2"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player2" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:weightSum="3">

            <Button
                    android:id="@+id/botonPlayer7"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player7" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/textRound1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom|center"
                        android:text="@string/round"
                        android:textSize="18sp" />

                <TextView
                        android:id="@+id/textRound2"
                        android:layout_width="match_parent"
                        android:layout_height="6dp"
                        android:layout_weight="2"
                        android:gravity="center|top"
                        android:text="@string/roundNumber"
                        android:textSize="40sp" />
            </LinearLayout>

            <Button
                    android:id="@+id/botonPlayer3"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player3" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="3"
                android:weightSum="3">

            <Button
                    android:id="@+id/botonPlayer6"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player6" />

            <Button
                    android:id="@+id/botonPlayer5"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player5" />

            <Button
                    android:id="@+id/botonPlayer4"
                    style="@style/botonEliminado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:text="@string/player4" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp">

            <Button
                    android:id="@+id/botonBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:textColor="@color/greyButton" />

            <Button
                    android:id="@+id/botonDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_no_jugable"
                    android:text="@string/delete" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>